sources/TileDB.CSharp/Interop/Methods.cs


        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_array_get_metadata_from_index(tiledb_ctx_t* ctx, tiledb_array_t* array, [NativeTypeName("uint64_t")] ulong index, [NativeTypeName("const char **")] sbyte** key, [NativeTypeName("uint32_t *")] uint* key_len, tiledb_datatype_t* value_type, [NativeTypeName("uint32_t *")] uint* value_num, [NativeTypeName("const void **")] void** value);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_array_has_metadata_key(tiledb_ctx_t* ctx, tiledb_array_t* array, [NativeTypeName("const char *")] sbyte* key, tiledb_datatype_t* value_type, [NativeTypeName("int32_t *")] int* has_key);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_buffer_alloc(tiledb_ctx_t* ctx, tiledb_buffer_t** buffer);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_buffer_free(tiledb_buffer_t** buffer);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_buffer_set_type(tiledb_ctx_t* ctx, tiledb_buffer_t* buffer, tiledb_datatype_t datatype);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_buffer_get_type(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_buffer_t *")] tiledb_buffer_t* buffer, tiledb_datatype_t* datatype);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_buffer_get_data(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_buffer_t *")] tiledb_buffer_t* buffer, void** data, [NativeTypeName("uint64_t *")] ulong* num_bytes);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_buffer_set_data(tiledb_ctx_t* ctx, tiledb_buffer_t* buffer, void* data, [NativeTypeName("uint64_t")] ulong size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_buffer_list_alloc(tiledb_ctx_t* ctx, tiledb_buffer_list_t** buffer_list);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_buffer_list_free(tiledb_buffer_list_t** buffer_list);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_buffer_list_get_num_buffers(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_buffer_list_t *")] tiledb_buffer_list_t* buffer_list, [NativeTypeName("uint64_t *")] ulong* num_buffers);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_buffer_list_get_buffer(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_buffer_list_t *")] tiledb_buffer_list_t* buffer_list, [NativeTypeName("uint64_t")] ulong buffer_idx, tiledb_buffer_t** buffer);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_buffer_list_get_total_size(tiledb_ctx_t* ctx, [NativeTypeName("const tiledb_buffer_list_t *")] tiledb_buffer_list_t* buffer_list, [NativeTypeName("uint64_t *")] ulong* total_size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_buffer_list_flatten(tiledb_ctx_t* ctx, tiledb_buffer_list_t* buffer_list, tiledb_buffer_t** buffer);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_data_order_to_str(tiledb_data_order_t data_order, [NativeTypeName("const char **")] sbyte** str);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_data_order_from_str([NativeTypeName("const char *")] sbyte* str, tiledb_data_order_t* data_order);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_alloc(tiledb_ctx_t* ctx, [NativeTypeName("const char *")] sbyte* array_uri, tiledb_fragment_info_t** fragment_info);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void tiledb_fragment_info_free(tiledb_fragment_info_t** fragment_info);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_set_config(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, tiledb_config_t* config);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_config(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, tiledb_config_t** config);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_load(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_fragment_name_v2(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, tiledb_string_t** name);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_fragment_num(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t *")] uint* fragment_num);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_fragment_uri(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("const char **")] sbyte** uri);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_fragment_size(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("uint64_t *")] ulong* size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_dense(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("int32_t *")] int* dense);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_sparse(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("int32_t *")] int* sparse);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_timestamp_range(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("uint64_t *")] ulong* start, [NativeTypeName("uint64_t *")] ulong* end);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_non_empty_domain_from_index(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("uint32_t")] uint did, void* domain);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_non_empty_domain_from_name(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("const char *")] sbyte* dim_name, void* domain);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_non_empty_domain_var_size_from_index(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("uint32_t")] uint did, [NativeTypeName("uint64_t *")] ulong* start_size, [NativeTypeName("uint64_t *")] ulong* end_size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_non_empty_domain_var_size_from_name(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("const char *")] sbyte* dim_name, [NativeTypeName("uint64_t *")] ulong* start_size, [NativeTypeName("uint64_t *")] ulong* end_size);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_non_empty_domain_var_from_index(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("uint32_t")] uint did, void* start, void* end);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_non_empty_domain_var_from_name(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("const char *")] sbyte* dim_name, void* start, void* end);

        [DllImport("tiledb", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: NativeTypeName("capi_return_t")]
        public static extern int tiledb_fragment_info_get_mbr_num(tiledb_ctx_t* ctx, tiledb_fragment_info_t* fragment_info, [NativeTypeName("uint32_t")] uint fid, [NativeTypeName("uint64_t *")] ulong* mbr_num);
